--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.4",
+    "bootstrap": "^5.3.5",
+    "clsx": "^2.1.1",
+    "next": "15.3.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
-    "next": "15.3.0"
+    "react-hook-form": "^7.55.0",
+    "react-icons": "^5.5.0",
+    "react-image-gallery": "^1.4.0"
   }
 }
